# ece-capstone-2024

./: .gitmodules  Cargo.toml  EditorTest.py  LICENSE  RawReadTest.py  SPWM.py  SimpleSim.asc  SimpleSim.net  SimpleSim.op.raw  SimpleSim.raw  motorLRmeasurements.xlsx  pulseview-config.pvs  pwm.rs  testltspice copy.py  testltspice.py  uart.rs
.cargo/: config.toml
MCAD/: README.md
MCAD/Motor_Encoder_Mods/3D Printing/: README.md  hex_endcap_w_slot.gcode  hex_nut_enclosure_with_slot.STL  shifted_molex_slot.STL
MCAD/Motor_Encoder_Mods/3D Printing/3D Print Archive/: connector_backplate.STL  enclosure_molex_panel_slot.STL  enclosure_molex_slot.STL  enclosure_wide_slot.STL  enclosure_wider_slot.STL  enclosure_with_slot.STL  hex_nut_endcap.STL  molex_slot.STL  motor_end_enclosure_with_slot.STL  slotted_enclosure.STL
MCAD/Motor_Encoder_Mods/Assemblies/: Motor_ASM.SLDASM  hex_nut_encap.SLDASM
MCAD/Motor_Encoder_Mods/Docs/: motor_endbell.SLDDRW
MCAD/Motor_Encoder_Mods/Modified Motor Parts/: 430200600.SLDPRT  91239A752_Button Head Hex Drive Screw.SLDPRT  92290A472_Super-Corrosion-Resistant 316 Stainless Steel Socket Head Screw.SLDPRT  93395A150_316 Stainless Steel Hex Drive Flat Head Screw.SLDPRT  Front_Plate.SLDPRT  Motor_Seal.SLDPRT  RMA05A3A00.SLDPRT  RMB20BC.SLDPRT  boca_SMR6800C_YZZ_5_NB2.SLDPRT  brass_spacer.SLDPRT  hex_nut_enclosure.SLDPRT  modded_motor.SLDPRT  motor_endbell.SLDPRT  motor_shaft.SLDPRT  shifted_molex_slot.SLDPRT
MCAD/Motor_Encoder_Mods/Modified Motor Parts/CAD Archive/: Bearing.SLDPRT  RMB20BC.STEP  enclosure_molex_slot.SLDPRT  enclosure_with_slot.SLDPRT  encoder_enclosure_molex_panel.SLDASM  motor_end_enclosure.SLDPRT  motor_end_enclosure_with_slot.SLDPRT  motor_endbell.STEP
MCAD/PCB_Mounting/PCB Mounting Parts/: Chassis Plate.SLDPRT  M3X6mm_countersunk_hex_screw.stp.SLDPRT  M3x50mm_standoff.SLDPRT  battery.SLDPRT  fake_PCB.SLDPRT  hex_socket_button_head_M3x08.SLDPRT  motor.SLDPRT  servo.SLDPRT  upper_deck.SLDPRT  upper_deck_hex_standoff.SLDPRT  upper_support.SLDPRT
MCAD/PCB_Mounting/PCB Mounting Parts/CAD Archive/: upper_deck_round_standoff.SLDPRT
control_algorithms/: Cargo.toml
control_algorithms/examples/: pid_test.rs
control_algorithms/src/: filters.rs  foc.rs  lib.rs  pid.rs  svpwm.rs
core_lib/: Cargo.toml  motor_class.py
core_lib/examples/: pid_test.rs
core_lib/src/: lib.rs
drv8323rs/: Cargo.toml
drv8323rs/src/: async_impl.rs  blocking_impl.rs  lib.rs  registers.rs
firmware/: Cargo.toml
firmware/.cargo/: config.toml
firmware/src/: consts.rs  driver.rs  helpers.rs  main.rs
ltc1408-12/: Cargo.toml
ltc1408-12/src/: lib.rs
sbus/: Cargo.toml
sbus/src/: lib.rs
simulations/: controller.py  main.py  motor.py
source_code/source/: Cargo.toml
