[package]
name = "control_algorithms"
version = "0.1.0"
edition = "2021"

[lib]
test = false
bench = false

[dependencies]
nalgebra = { version = "0.32.4", default-features = false, features = [
    "macros",
] }
micromath = "2.1.0"
defmt = { version = "0.3.6" }

[dev-dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.3" }
defmt = { version = "0.3.6" }
defmt-rtt = { version = "0.4.0" }
panic-probe = { version = "0.3.1" }
