[package]
name = "drv8323rs"
version = "0.1.0"
edition = "2021"

[features]
async = ["dep:embedded-hal-async", "dep:device-register-async"]

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = { version = "1.0.0", optional = true }
device-register = "0.4"
device-register-async = { version = "0.4", optional = true }
modular-bitfield-msb = "0.11"
