[package]
name = "firmware"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "firmware"
test = false
bench = false

[dependencies]
# cortex-m assembly instructions
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
# cortex-m runtime
cortex-m-rt = { version = "0.7.3" }

# no_std debug printing/logging
defmt = { version = "0.3.6" }
# RTT backend for defmt
defmt-rtt = { version = "0.4.0" }
# panic handler for defmt
panic-probe = { version = "0.3.1", features = ["print-rtt"] }

# embedded api for implementing platform agnostic drivers
embedded-hal = "1.0.0"

# async version of embedded hal api
embedded-hal-async = "1.0.0"

# async embedded api for implementing serial ports
embedded-io-async = "0.6.1"

# embedded floating point math approximations
micromath = "2.1.0"

# embassy async runtime
# embassy-executor = { version = "0.5.0", features = [
#     "defmt",
#     "integrated-timers",
#     "arch-cortex-m",
#     "executor-thread",
# ] }
embassy-executor = { git = "https://github.com/natrow/embassy.git", features = [
    "defmt",
    "integrated-timers",
    "arch-cortex-m",
    "executor-thread",
] }

# uses hardware timers to implement async delay and timeout functions
# embassy-time = { version = "0.3.0", features = ["defmt"] }
embassy-time = { git = "https://github.com/natrow/embassy.git", features = [
    "defmt",
] }

# hardware-abstraction-layer implementation
# embassy-stm32 = { version = "0.1.0", features = [
#     "defmt",
#     "exti",
#     "time-driver-tim2",
#     "stm32g431kb",
#     "memory-x",
#     "chrono",
#     "unstable-pac",
# ] }

embassy-stm32 = { git = "https://github.com/natrow/embassy.git", features = [
    "defmt",
    "exti",
    "time-driver-tim2",
    "stm32g431kb",
    "memory-x",
    "chrono",
    "unstable-pac",
] }

# utilities to use embedded-hal API with embassy
# embassy-embedded-hal = "0.1.0"
embassy-embedded-hal = { git = "https://github.com/natrow/embassy.git" }

# synchronization primitives with async support
# embassy-sync = "0.5.0"
embassy-sync = { git = "https://github.com/natrow/embassy.git" }

# DRV driver
drv8323rs = { path = "../drv8323rs", features = ["async"] }

# SBUS driver
sbus = { path = "../sbus", features = ["defmt"] }

# Control Algorithms
control_algorithms = { path = "../control_algorithms" }
# LTC driver
ltc1408-12 = { path = "../ltc1408-12" }

# Linear Algebra
nalgebra = { version = "0.32.4", default-features = false, features = [
    "macros",
] }
